// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manipulated MIS cannot be used to call the wrong model create an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: CreateTodoInput!) { createTodo(input: $input) { id content createdAt updatedAt } }",
      "variables": {
        "input": {
          "content": "My new todo",
        },
      },
    },
    {},
  ],
]
`;

exports[`Manipulated MIS cannot be used to call the wrong model delete an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: DeleteTodoInput!) { deleteTodo(input: $input) { id content createdAt updatedAt } }",
      "variables": {
        "input": {
          "id": "123123213",
        },
      },
    },
    {},
  ],
]
`;

exports[`Manipulated MIS cannot be used to call the wrong model update an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: UpdateTodoInput!) { updateTodo(input: $input) { id content createdAt updatedAt } }",
      "variables": {
        "input": {
          "content": "Updated content",
          "id": "some_id",
        },
      },
    },
    {},
  ],
]
`;
